--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,7 @@
             "email": "dion26@yandex.ru"
         }
     ],
-    "require": {}
+    "require": {
+        "guzzle/guzzle": "^3.9"
+    }
 }
